basic functionality is working now

--- a/public/css/create.css
+++ b/public/css/create.css
@@ -3,13 +3,15 @@
     margin: 0 auto;
     margin-top: 50px;
 }
-
 @media all and (max-width: 720px) {
     #form {
         width: 90%;
     }
 }
-
 #form-button {
     width: 150px;
+}
+#toast-container {
+    padding: 5% !important;
+    text-align: center;
 }
